--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <!-- Style normalize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- connect whith stylesheet -->
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 
 <body>
     <header class="header">
+        <div class="container header-container">
         <a class="logo" href="index.html">Web<span class="span-studio">Studio</span></a>
         <nav>
             <ul class="header-list">
@@ -24,94 +30,117 @@
             </ul>
         </nav>
         <ul class="header-group">
-        <li class="list"><a class="header-mail list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="list"><a class="header-mail list link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li class="list"><a class="header-contact list" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
 
     <!-- Эффективные решения для вашего бизнеса -->
     <main>
         <section class="hero">
-            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+            <div class="container solutions-div">
+            <h1 class="title">Эффективные решения<br> для вашего бизнеса</h1>
             <button class="btn" type="button">Заказать услугу</button>
+            </div>
         </section>
-
+        
         <!-- Деятельность WebStudio-->
-        <section class="main-features">
+        <section>
+            <div class="container features-block">
             <h2 hidden>Особенности</h2>
-            <ul>
-                <li class="list">
+            <ul class="universal-list">
+
+                <li class="list list-card">
                     <h3 class="article-title">Внимание к деталям</h3>
                     <p class="featrers-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="list">
+
+                <li class="list list-card">
                     <h3 class="article-title">Пунктуальность</h3>
                     <p class="featrers-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="list">
+
+                <li class="list list-card">
                     <h3 class="article-title">Планирование</h3>
                     <p class="featrers-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="list">
+
+                <li class="list list-card">
                     <h3 class="article-title">Современные технологии</h3>
                     <p class="featrers-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
+
             </ul>
+            </div>
         </section>
         <section class="about">
+            <div class="container">
             <h2 class="under-title">Чем мы занимаемся</h2>
-            <ul>
-                <li class="list">
+            <ul class="universal-list">
+                <li class="list img-list">
                     <img src="./images/work/img-1.jpg" alt="Изображение 1" width="370" height="294">
                 </li>
-                <li class="list">
+                <li class="list img-list">
                     <img src="./images/work/img-2.jpg" alt="Изображение 2" width="370" height="294">
                 </li>
-                <li class="list">
+                <li class="list img-list">
                     <img src="./images/work/img-3.jpg" alt="Изображение 3" width="370" height="294">
                 </li>
             </ul>
+            </div>
         </section>
 
         <!-- Команда  WebStudio-->
-        <section class="team">
+        <section>
+            <div class="container">
             <h2 class="under-title">Наша команда</h2>
-            <ul>
-                <li class="list">
+
+            <ul class="header-list cards-team">
+
+                <li class="list team-list">
                     <img src="./images/team/img-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3 class="under-title-list">Игорь Демьяненко</h3>
-                    <p class="job-title" lang="en">Product Designer</p>
+                    <h3 class="under-title-list name-one">Игорь Демьяненко</h3>
+                    <p class="job-title job-one" lang="en">Product Designer</p>
                 </li>
-                <li class="list">
+
+                <li class="list team-list">
                     <img src="./images/team/img-2.jpg" alt="Ольга Репина" width="270" height="260">
-                    <h3 class="under-title-list">Ольга Репина</h3>
-                    <p class="job-title" lang="en">Frontend Developer</p>
+                    <h3 class="under-title-list name-two">Ольга Репина</h3>
+                    <p class="job-title job-two" lang="en">Frontend Developer</p>
                 </li>
-                <li class="list">
+
+                <li class="list team-list">
                     <img src="./images/team/img-3.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <h3 class="under-title-list">Николай Тарасов</h3>
-                    <p class="job-title" lang="en">Marketing</p>
+                    <h3 class="under-title-list name-three">Николай Тарасов</h3>
+                    <p class="job-title job-three" lang="en">Marketing</p>
                 </li>
-                <li class="list">
+
+                <li class="list team-list">
                     <img src="./images/team/img-4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                    <h3 class="under-title-list">Михаил Ермаков</h3>
-                    <p class="job-title" lang="en">UI Designer</p>
+                    <h3 class="under-title-list name-four">Михаил Ермаков</h3>
+                    <p class="job-title job-four" lang="en">UI Designer</p>
                 </li>
-            </ul>
+
+            </ul> 
+        </div>
         </section>
+           
     </main>
 
     <!-- Подвал сайта -->
     <footer class="footer">
-        <a class="logo" href="index.html">Web<span class="span-studio">Studio</span></a>
+        <div class="container footer-content">
+        <a class="logo logo-footer" href="index.html">Web<span class="span-studio logo-span">Studio</span></a>
         <address>
-            <ul>
-                <li class="list"><a class="link address" href="https://goo.gl/maps/Ta4kuVLoX1wkfBHNA" target="_blank" rel="noopener norreferer ">г. Киев,
+            <ul class="footer-list">
+                <li class="list address-list"><a class="link address" href="https://goo.gl/maps/Ta4kuVLoX1wkfBHNA" target="_blank" rel="noopener norreferer ">г. Киев,
                         пр-т Леси Украинки, 26</a></li>
-                <li class="list"><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
-                <li class="list"><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li class="list address-list"><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
+                <li class="list address-list"><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 
