--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </ul>
             </div>
         </section>
-        <section class="about">
+        <section>
             <div class="container">
             <h2 class="under-title">Чем мы занимаемся</h2>
             <ul class="universal-list">
