--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     <!-- main section -->
     <main>
         <!-- навигация сайта -->
-        <section>
+        <section class="btn-section">
             <div class="container btn-box">
                 <h1 hidden>Проекты</h1>
             <ul class="list-btn">
@@ -55,57 +55,57 @@
                 <div class="container img-box">
                 <ul class="img-box-list">
                 <li class="list card-img">
-                    <img class="img-tech" src="./images/portfolio/img-1.jpg" alt="Технокряк" width="370" height="294">
-                    <h2 class="portfolio-title">Технокряк</h2>
-                    <p class="portfolio-text">веб-сайт</p>
+                    <img src="./images/portfolio/img-1.jpg" alt="Технокряк" width="370" height="294">
+                    <div class="box-title"><h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">веб-сайт</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="portfolio-text">Дизайн</p>
+                    <div class="box-title"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h2 class="portfolio-title">Ресторан Seafood</h2>
-                    <p class="portfolio-text">Приложение</p>
+                    <div class="box-title"><h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Приложение</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-4.jpg" alt="Проект Prime" width="370" height="294">
-                    <h2 class="portfolio-title">Проект Prime</h2>
-                    <p class="portfolio-text">Маркетинг</p>
+                    <div class="box-title"><h2 class="portfolio-title">Проект Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-5.jpg" alt="Проект Boxes" width="370" height="294">
-                    <h2 class="portfolio-title">Проект Boxes</h2>
-                    <p class="portfolio-text">Приложение</p>
+                    <div class="box-title"><h2 class="portfolio-title">Проект Boxes</h2>
+                    <p class="portfolio-text">Приложение</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                    <p class="portfolio-text">Веб-сайт</p>
-                </li>
+                    <div class="box-title"><h2 class="portfolio-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p></div>
+                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-7.jpg" alt="Издание Limited Edition" width="370" height="294">
-                    <h2 class="portfolio-title">Издание Limited Edition</h2>
-                    <p class="portfolio-text">Дизайн</p>
+                    <div class="box-title"><h2 class="portfolio-title">Издание Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-8.jpg" alt="Проект LAB" width="370" height="294">
-                    <h2 class="portfolio-title">Проект LAB</h2>
-                    <p class="portfolio-text">Маркетинг</p>
+                    <div class="box-title"><h2 class="portfolio-title">Проект LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p></div>
                 </li>
 
                 <li class="list card-img">
                     <img src="./images/portfolio/img-9.jpg" alt="Growing Business" width="370" height="294">
-                    <h2 class="portfolio-title">Growing Business</h2>
-                    <p class="portfolio-text">Приложение</p>
+                    <div class="box-title"><h2 class="portfolio-title">Growing Business</h2>
+                    <p class="portfolio-text">Приложение</p></div>
                 </li>
             </ul>
             </div>
